0.9-3
======================

* Uploaded on R-Forge 2012 - 03 - 28

* Included default value for gpData$covar$family to
  avoid an error when running write.plink without
  family information, replaced error by a warning
  
* Included addtional 'print.report' argument for 
  function codeGeno to generate (optionally) a report 
  to decode original coding scheme, and count number 
  of missing values per SNP

* Bug fix in codeGeno using family imputing, polymorphic
  families were identified partly incorrect 
  
* Bug fix in predict.gpMod, when using BLUP and marker 
  effects (2012-05-04)
  
* Renamed return argument in gpMod: predicton -> prediction

* Added argument 'ld.window' to function pairwiseLD (2012-05-07)

* Changed dependency: igraph -> igraph0 (2012-05-10)
      
  
  
0.9-2
======================   
 
* Uploaded on CRAN 2012 - 03 - 22

* updated vignette, replace LDmaize.pdf by LDmaize.png

* proof-reading of the manual

* minor updates in the demos
  
  